fixed explore mode nodes alignment and updated css styling

--- a/app/org/menu-confirm/menu-confirm.component.css
+++ b/app/org/menu-confirm/menu-confirm.component.css
@@ -12,6 +12,7 @@
 
 .confirmImport p strong {
     color: #607d8b;
+    color: var(--blue-grey);
 }
 
 .confirmImport .confirmbtns {
